# runpix

./: .gitignore  CMakeLists.txt  FlxProject.sublime-project  README.md  build.sh  build_run.sh  buildandrun.txt  f.ini  init_cmake.sh  log4cxx.config  main.c  main.cpp  runpix.kdev4
.kdev4/: runpix.kdev4
assets/: oo.tsx  pixie.pxo  pixie_house.pxo  pulpiki.pxo  quadratix.pxo  sun.pxo  terry.pxo  untitled.tmx
assets/images/: abelli.pxo  hgronfohrt.pxo  pixie.pxo  shark.pxo  tree.pxo
assets/images/tiles/: tiles.csv  tiles.json
docs/: Doxyfile.in
engine/: sprite.cpp  sprite.h
r/infrastructure/graphics/: graphics.h
r/infrastructure/log/: logger.cpp  logger.h
source/: MenuState.hx  PlayState.hx
source/infra/: Utils.hx
